# sui

./: Cargo.toml  package-lock.json  package.json
crates/sslab-benchmark/: .gitignore  Cargo.toml  build.rs  fabfile.py  narwhal-node  settings-LAN.json  settings.json  sslab-benchmark-client
crates/sslab-benchmark/benchmark/: LAN.py  aggregate.py  aws_instance.py  commands.py  config.py  local.py  local_instance.py  logs.py  plot.py  remote.py  remote_install.yaml  settings.py  utils.py
crates/sslab-benchmark/benchmark/ansible/: remote_install.yaml
crates/sslab-benchmark/benchmark/ansible/aws/: README.md  ansible.cfg  boto3_install.yml  requirements.yml
crates/sslab-benchmark/benchmark/ansible/aws/inventory/: aws_ec2.yml
crates/sslab-benchmark/benchmark/ansible/aws/playbook/: create_instances.yml  info  install_dependencies.yml  start_instances.yml  stop_instances.yml
crates/sslab-benchmark/benchmark/ansible/aws/task/: create.yml  install.yml
crates/sslab-benchmark/plots/: concurrency-bench-0-4-1-True-250000-any.txt
crates/sslab-benchmark/src/: main.rs
crates/sslab-benchmark/src/contracts/: SmallBank.abi  SmallBank.json  SmallBank.sol
crates/sslab-benchmark/src/workloads/: mod.rs
crates/sslab-benchmark/src/workloads/smallbank/: mod.rs  protos.rs  smallbank_contract.rs  smallbank_transaction_handler.rs
crates/sslab-core/: Cargo.toml
crates/sslab-core/benches/: decoding.rs  mod.rs  nezha.rs
crates/sslab-core/src/: benchmark_client.rs  consensus_handler.rs  execution_driver.rs  execution_storage.rs  executor.rs  lib.rs  main.rs  nezha.rs  transaction_manager.rs  transaction_validator.rs  types.rs
crates/sslab-core/src/execution_models/: mod.rs
crates/sslab-core/src/execution_models/execution_storage/: evm_storage.rs  mod.rs
crates/sslab-core/src/execution_models/execution_storage/backend/: concurrent_memory_backend.rs  memory_backend.rs  mod.rs
crates/sslab-core/src/execution_models/nezha/: address_based_conflict_graph.rs  mod.rs  nezha_core.rs  types.rs
crates/sslab-core/src/execution_models/nezha/tests/: integration_tests.rs  nezha_tests.rs  utils.rs
crates/sslab-core/src/execution_models/serial/: serial_executor.rs
crates/sslab-core/src/unit_tests/: nezha_tests.rs
crates/sslab-core/src/utils/: smallbank_contract_benchmark.rs
crates/sslab-execution/blockstm/: Cargo.toml
crates/sslab-execution/blockstm/benches/: latency.rs  parse_log.py  performance_benches.rs  scheduler_benches.rs
crates/sslab-execution/blockstm/src/: evm_utils.rs  executor.rs  lib.rs  scheduler.rs  task.rs
crates/sslab-execution/blockstm/src/infallible/: mod.rs
crates/sslab-execution/blockstm/src/utils/: mod.rs  smallbank_contract_benchmark.rs
crates/sslab-execution/evm/: Cargo.toml
crates/sslab-execution/evm/src/: evm_processor.rs  executor.rs  lib.rs  transaction_validator.rs  types.rs
crates/sslab-execution/evm/src/db/: builder.rs  in_memory_db.rs  mod.rs  state.rs
crates/sslab-execution/evm/src/db/cache/: cache_account.rs  mod.rs  state.rs
crates/sslab-execution/evm/src/evm_storage/: evm_storage.rs  mod.rs
crates/sslab-execution/evm/src/evm_storage/backend/: concurrent_memory_backend.rs  concurrent_memory_db.rs  memory_backend.rs  mod.rs
crates/sslab-execution/evm/src/traits/: mod.rs
crates/sslab-execution/evm/src/utils/: mod.rs  smallbank_contract_benchmark.rs  test_utils.rs
crates/sslab-execution/nezha/: Cargo.toml
crates/sslab-execution/nezha/benches/: bench.log.out  latency.rs  nezha.rs  optimizations.rs  optme.rs  optme_baseline.rs  parallelism.rs  parse_log.py
crates/sslab-execution/nezha/src/: address_based_conflict_graph.rs  evm_utils.rs  lib.rs  nezha_core.rs  types.rs
crates/sslab-execution/nezha/src/tests/: integration_tests.rs  mod.rs  nezha_tests.rs
crates/sslab-execution/serial/: Cargo.toml
crates/sslab-execution/serial/benches/: parse_log.py  serial.rs
crates/sslab-execution/serial/src/: evm_utils.rs  lib.rs  serial_executor.rs
crates/sui-core/src/narwhal_manager/: mod.rs
narwhal/benchmark/: fabfile.py
narwhal/executor/src/: lib.rs  subscriber.rs
narwhal/network/src/: client.rs  lib.rs  traits.rs
narwhal/node/src/: main.rs  primary_node.rs  worker_node.rs
narwhal/node/tests/: node_test.rs
narwhal/primary/src/: primary.rs  synchronizer.rs
narwhal/primary/src/tests/: certificate_fetcher_tests.rs  certifier_tests.rs  primary_tests.rs  synchronizer_tests.rs
narwhal/test-utils/src/: cluster.rs
narwhal/worker/: Cargo.toml
narwhal/worker/src/: batch_fetcher.rs  batch_maker.rs  handlers.rs  worker.rs
narwhal/worker/src/tests/: batch_maker_tests.rs  handlers_tests.rs  worker_tests.rs
