[package]
name = "sslab-benchmark"
version = "0.1.0"
authors = ["Donghyeon Ryu <donghyeonryu@postech.ac.kr>"]
edition = "2021"
license = "Apache-2.0"
publish = false
build = "build.rs"

# [lib]
# name = "sslab_benchmark_client"
# path = "src/main.rs"
# required-features = ["benchmark"]
# crate-type = ["bin"] 

[dependencies]
bytes = "1.4.0"
cfg-if.workspace = true
clap = "2.34"
eyre.workspace = true
futures.workspace = true
rust-crypto = "0.2"
rustc-serialize = "0.3"

protobuf = "2.23"
sha3 = "^0.8.0"
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-retry.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

ethers = { version = "^2.0.0" }
ethers-signers = { version = "^2.0.0" }
ethers-providers = { version = "^2.0.0" }
ethers-core = { version = "^2.0.0" }
enumn = "0.1.11"

rand_distr = "0.4.3"

sui-network.workspace = true
sui-types.workspace = true
narwhal-types.workspace = true
sslab-core.workspace = true

[build-dependencies]
protoc-rust = "2.0"
glob = "0.3"
ethers = "^2.0.0"
ethers-solc = "^2.0.0"
convert_case = "0.6.0"
serde_json = "^1.0.64"

[features]
default = []

stable = []

benchmark = []

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]

[[bin]]
name = "sslab-benchmark-client"
path = "src/main.rs"
required-features = ["benchmark"]