[package]
name = "sslab-core"
version = "0.1.0"
authors = ["Donghyeon Ryu <donghyeonryu@postech.ac.kr>"]
edition = "2021"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
bcs.workspace = true
bytes.workspace = true
cfg-if.workspace = true
chrono.workspace = true
clap = "2.34"
dashmap.workspace = true
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
futures.workspace = true
itertools.workspace = true
lru.workspace = true
num_cpus.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
rocksdb.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-retry.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
fastcrypto.workspace = true

mysten-metrics.workspace = true
narwhal-config.workspace = true
narwhal-crypto.workspace = true
narwhal-executor.workspace = true
narwhal-network.workspace = true
narwhal-node = { workspace = true, features = ["trace_transaction", "benchmark"] }
narwhal-types.workspace = true
narwhal-worker.workspace = true
shared-crypto.workspace = true
sui-archival.workspace = true
sui-config.workspace = true
sui-execution = { path = "../../sui-execution" }
sui-framework.workspace = true
sui-swarm-config.workspace = true
sui-genesis-builder.workspace = true
sui-keys.workspace = true
sui-json-rpc-types.workspace = true
sui-macros.workspace = true
sui-move-build.workspace = true
sui-network.workspace = true
sui-protocol-config.workspace = true
sui-simulator.workspace = true
sui-storage.workspace = true
sui-types.workspace = true
tracing-subscriber.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
sui-core.workspace = true

evm = { git="https://github.com/Dong-Hyeon-Yu/evm.git", rev="120a40a5d4f817c34012285b472b28b89a47049e"}#branch="master"}
ethers-providers = { version = "^2.0.0" }
ethers-core = { version = "^2.0.0" }
enumn = "0.1.11"
rayon = "1.8.0"
nohash-hasher = "0.2.0"
hashbrown = "0.14.2"
# console-subscriber = "^0.1.0"
flurry = "0.4.0"
# sharded = { version = "0.2.1", features = ["fxhash", "parking_lot"] }
# leapfrog = { version = "0.3.0", features = ["stable_alloc"] }


# dev-dependencies used in criterion
ethers = "^2.0.0"
ethers-signers = { version = "^2.0.0" }
rand_distr = "0.4.3"

[dev-dependencies]
criterion.workspace = true
expect-test.workspace = true
fs_extra.workspace = true
more-asserts.workspace = true
pretty_assertions.workspace = true
serde-reflection.workspace = true
serde_yaml.workspace = true

narwhal-test-utils.workspace = true
sui-test-transaction-builder.workspace = true
sui-types = { workspace = true, features = ["test-utils"] }

gnuplot = "0.0.39"


[features]
benchmark = ["narwhal-node/benchmark"]

# execution model
nezha = []
serial = []

[[bin]]
name = "sslab-narwhal-node"
path = "src/main.rs"

[[bench]]
name = "nezha"
path = "./benches/nezha.rs"
harness = false

# [build]
# rustflags = ["--cfg", "tokio_unstable"]