[package]
name = "sslab-execution-blockstm"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem parallel transaction executor library"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mvhashmap = { path = "../mvhashmap" }
# diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
# diem-infallible = { path = "../../crates/diem-infallible" }
async-trait.workspace = true
anyhow = "1.0.52"
crossbeam-queue = "0.3.1"
rayon = "1.5.0"
num_cpus = "1.13.0"
once_cell = "1.7.2"
crossbeam = "0.8"
arc-swap = "1.5.0"
ethers = "^2.0.0"

criterion = { version = "0.5.1", optional = true }
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.4.0", optional = true }

dashmap.workspace = true
tracing.workspace = true

sui-types.workspace = true
sslab-execution = { workspace = true, features = ["blockstm"] }
evm = { workspace = true, features = ["mvcc"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio", "default"] }
tokio.workspace = true
rand = "0.8.3"
proptest = "1.0.0"
proptest-derive = "0.4.0"
ethers-providers = { version = "^2.0.0" }
parking_lot.workspace = true

[features]
fuzzing = ["criterion", "proptest", "proptest-derive"]
latency = []

[[bench]]
name = "scheduler_benches"
harness = false
required-features = ["fuzzing"]

[[bench]]
name = "performance_benches"
harness = false

[[bench]]
name = "latency"
harness = false
required-features = ["latency"]
