[package]
name = "sslab-execution"
version = "0.1.0"
authors = ["Donghyeon Ryu <donghyeonryu@postech.ac.kr>"]
edition = "2021"
license = "Apache-2.0"
publish = false


[dependencies]
async-trait.workspace = true
bytes.workspace = true
cfg-if.workspace = true
criterion.workspace = true
fastcrypto.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }

mysten-metrics.workspace = true
narwhal-executor.workspace = true
narwhal-types.workspace = true
narwhal-worker.workspace = true
tracing-subscriber.workspace = true
sui-protocol-config.workspace = true
sui-types.workspace = true
evm.workspace = true

enumn = "0.1.11"
ethers-core = { version = "^2.0.0" }
flurry = "0.4.0"
hashbrown = { version = "0.14.2", features = ["rayon", "inline-more", "default"]}
rayon = "1.8.0"

ethers = "^2.0.0"
ethers-signers = { version = "^2.0.0" }
ethers-providers = { version = "^2.0.0" }
rand_distr = "0.4.3"

[features]

benchmark = []
blockstm = ["evm/mvcc"]
