[package]
name = "sslab-execution"
version = "0.1.0"
authors = ["Donghyeon Ryu <donghyeonryu@postech.ac.kr>"]
edition = "2021"
license = "Apache-2.0"
publish = false


[dependencies]
async-trait.workspace = true
bytes.workspace = true
cfg-if.workspace = true
criterion.workspace = true
fastcrypto.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }

mysten-metrics.workspace = true
narwhal-executor.workspace = true
narwhal-types.workspace = true
narwhal-worker.workspace = true
tracing-subscriber.workspace = true
sui-protocol-config.workspace = true
sui-types.workspace = true
eyre.workspace = true

hashbrown = { version = "0.14.2", features = [
    "rayon",
    "inline-more",
    "default",
] }
rayon.workspace = true
dashmap = { workspace = true, features = ['rayon', 'inline'] }
reth.workspace = true
reth-db.workspace = true
reth-interfaces.workspace = true
reth-trie.workspace = true
reth-node-ethereum.workspace = true

# benchmark utils
ethers = { version = "^2.0.0", optional = true }
ethers-core = { version = "^2.0.0", optional = true }
ethers-signers = { version = "^2.0.0", optional = true }
ethers-providers = { version = "^2.0.0", optional = true }
rand_distr = { version = "0.4.3", optional = true }

[dev-dependencies]
ethers = "^2.0.0"
ethers-core = "^2.0.0"
ethers-signers = "^2.0.0"
ethers-providers = "^2.0.0"
rand_distr = "0.4.3"


[features]
default = []
benchmark = [
    "ethers",
    "ethers-core",
    "ethers-signers",
    "ethers-providers",
    "rand_distr",
]
