[package]
name = "sslab-execution-nezha"
version = "0.1.0"
authors = ["Donghyeon Ryu <donghyeonryu@postech.ac.kr>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
async-trait.workspace = true
itertools.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
sui-types.workspace = true
narwhal-types.workspace = true
sslab-execution.workspace = true
evm.workspace = true
num_cpus.workspace = true
parking_lot.workspace = true

ethers-core = { version = "^2.0.0" }
rayon = "1.8.0"
nohash-hasher = "0.2.0"
hashbrown = { version = "0.14.2", features = ["inline-more", "default"] }
incr_stats = { version = "1.0.2", optional = true }

[dev-dependencies]
ethers = "^2.0.0"
ethers-signers = { version = "^2.0.0" }
ethers-providers = { version = "^2.0.0" }
rand_distr = "0.4.3"
criterion = { workspace = true, features = ["async_tokio", "default"] }

[features]
parallelism-analysis = ["incr_stats"]
disable-early-detection = []
optimizations = ["disable-early-detection"]
optme = []

[[bench]]
name = "optme"
harness = false
required-features = ["optme"]

[[bench]]
name = "parallelism"
harness = false
required-features = ["parallelism-analysis", "disable-early-detection"]

[[bench]]
name = "optimizations"
harness = false
required-features = ["optimizations"]
