[package]
name = "sslab-execution-nezha"
version = "0.1.0"
authors = ["Donghyeon Ryu <donghyeonryu@postech.ac.kr>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
async-trait.workspace = true
itertools.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
sui-types.workspace = true
narwhal-types.workspace = true
sslab-execution.workspace = true
num_cpus.workspace = true
parking_lot.workspace = true

rayon = "1.8.0"
nohash-hasher = "0.2.0"
hashbrown = { version = "0.14.2", features = ["inline-more", "default"] }
reth.workspace = true

[dev-dependencies]
ethers = "^2.0.0"
ethers-signers = { version = "^2.0.0" }
ethers-providers = { version = "^2.0.0" }
rand_distr = "0.4.3"
criterion = { workspace = true, features = ["async_tokio", "default"] }

[features]
latency = []
optme = []

[[bench]]
name = "optme"
harness = false
required-features = ["optme"]

[[bench]]
name = "latency"
harness = false
required-features = ["latency"]
