[package]
name = "sslab-execution-serial"
version = "0.1.0"
authors = ["Donghyeon Ryu <donghyeonryu@postech.ac.kr>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
async-trait.workspace = true
sui-types.workspace = true
sslab-execution.workspace = true
tracing.workspace = true
criterion.workspace = true
evm.workspace = true

[dev-dependencies]
ethers = "^2.0.0"
ethers-signers = { version = "^2.0.0" }
ethers-providers = { version = "^2.0.0" }
rand_distr = "0.4.3"

[[bench]]
name = "serial"
harness = false
