[package]
name = "sslab-execution-serial"
version = "0.1.0"
authors = ["Donghyeon Ryu <donghyeonryu@postech.ac.kr>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
async-trait.workspace = true
sui-types.workspace = true
sslab-execution.workspace = true
tracing.workspace = true
eyre.workspace = true

reth.workspace = true

anstyle = "1.0.6"
parking_lot.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true
sslab-execution = { workspace = true, features = ["benchmark"] }

[[bench]]
name = "serial"
harness = false
